fix scroll bar cut off

--- a/src/extensions/default/edge-code-kuler/styles/kuler.less
+++ b/src/extensions/default/edge-code-kuler/styles/kuler.less
@@ -129,7 +129,7 @@
     }
     
     .kuler-scroller {
-        max-height: 182px;
+        max-height: 178px;
         overflow-y: auto;
         overflow-x: hidden;
     }
